syntax = "proto2";
package sample2;

message Msg {
    //int64 ival = 1;
    //repeated int64 rival = 2;
    //string sval = 3;
    //repeated string rsval = 4;
    
    message SubMsg {
        //SubMsg recursive_msg = 1;
        //repeated SubMsg recursive_rmsg = 2;

        //message SubSubMsg {
        //    int64 ival = 1;
        //}
    }
    //SubMsg submsg = 5;
    //repeated SubMsg rsubmsg = 6;
    //SubMsg.SubSubMsg subsubmsg = 7;
    map<string, SubMsg> the_map = 8;
}

message Test1 {
  optional int32 a = 1;
}

message Test2 {
  optional string b = 2;
}

message Test3 {
  optional Test1 c = 3;
}

message Test4 {
  repeated int32 d = 4 [packed=true];
}
