syntax = "proto2";
package ser_tests2;

message Msg {
    optional int32 i32_optional = 1;
    repeated int32 i32_repeated = 2;
    optional float float_optional = 3;
    repeated float float_repeated = 4;
    optional string string_optional = 5;
    repeated string string_repeated = 6;

    message Submsg {
        optional int32 i32_optional = 1;
    }
    optional Submsg submsg_optional = 7;
    repeated Submsg submsg_repeated = 8;

    optional Enum enum_optional = 9;
    repeated Enum enum_repeated = 10;

    optional int32 very_large_field_number = 536870911; // 2^29 - 1
}

enum Enum {
    ZEROTH = 0;
    FIRST = 1;
    TENTH = 10;
}